--- a/example/public/index.html
+++ b/example/public/index.html
@@ -1,6 +1,10 @@
 <html>
   <head>
     <title>trillium!</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
-  <body><h1>this is static content!</h1></body>
+  <body><h1>Welcome to trillium!</h1></body>
 </html>
