--- a/static-compiled/examples/files/index.html
+++ b/static-compiled/examples/files/index.html
@@ -1,1 +1,8 @@
-<h1>hello world</h1>
+<html>
+  <head>
+    <script src="/js.js"></script>
+  </head>
+  <body>
+    <h1>hello world</h1>
+  </body>
+</html>
